--- a/pyt/blas_routines.ipynb
+++ b/pyt/blas_routines.ipynb
@@ -19,16 +19,16 @@
      "output_type": "stream",
      "text": [
       "    A      x = b\n",
-      "[8 6 0 4] [9] [120]\n",
-      "[6 9 0 9] [8] [126]\n",
-      "[4 8 5 1] [7] [135]\n",
-      "[5 9 6 3] [0] [159]\n"
+      "[2 6 9 8] [9] [104]\n",
+      "[7 1 6 5] [0] [119]\n",
+      "[7 8 3 1] [6] [85]\n",
+      "[2 4 5 9] [4] [84]\n"
      ]
     }
    ],
    "source": [
     "# Matrix vector product\n",
-    "\n",
+    "# Note: np.multiply() and the * operator are equivalent to .* in Matlab/Octave\n",
     "A = np.random.randint(0,10,size=(4,4))\n",
     "x = np.random.randint(0,10,size=(4,1))\n",
     "b = np.dot(A,x)\n",
@@ -38,13 +38,6 @@
     "for i in range(A.shape[1]):\n",
     "    print(A[i,:],x[i],b[i])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
