--- a/pyt/basic_numpy.ipynb
+++ b/pyt/basic_numpy.ipynb
@@ -41,18 +41,35 @@
       "\n",
       "metadata : size=12, bytes=48, dim=3, shape=(2, 2, 3) \n",
       "\n",
-      "id(x)=2653557785904, id(y)=2653557786624 \n",
+      "[[[1000    2    3]\n",
+      "  [   4    5    6]]\n",
+      "\n",
+      " [[   7    8    9]\n",
+      "  [  10   11   12]]] \n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Reshape (copies data)\n",
-    "x = np.arange(1,13,1)\n",
-    "y = np.reshape(x,(2,2,3))\n",
+    "# Reshape (creates a new view object if possible; otherwise, it copies data)\n",
+    "x = np.arange(1,13,1).reshape((12,1))\n",
+    "y = np.reshape(x,(2,2,-1))\n",
     "print(y,'\\n')\n",
     "print(\"metadata : size={0}, bytes={1}, dim={2}, shape={3}\".format(y.size,y.nbytes,y.ndim,y.shape),'\\n')\n",
-    "print(\"id(x)={0}, id(y)={1}\".format(id(x),id(y)),'\\n')"
+    "x[0,0] = 1000\n",
+    "print(y,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Reference: numpy.reshape](https://docs.scipy.org/doc/numpy/reference/generated/numpy.reshape.html)\n",
+    "\n",
+    "Note: when a shape arg is -1, the arg is automatically inferred from other args.\n",
+    "\n",
+    "In the above example, a view object is created and the data is thus not copied. However, to make sure that the data is not copied while reshaping, use explicit view and then force the shape as shown [here](https://docs.scipy.org/doc/numpy/reference/generated/numpy.reshape.html)\n",
+    "."
    ]
   },
   {
@@ -64,31 +81,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 0  0  0]\n",
-      "  [ 0  0  0]]\n",
+      "[[[1000    2    3]\n",
+      "  [   4    5    6]]\n",
       "\n",
-      " [[ 7  8  9]\n",
-      "  [10 11 12]]] \n",
+      " [[   0    0    0]\n",
+      "  [   0    0    0]]] \n",
       "\n",
       "metadata : size=12, bytes=48, dim=3, shape=(2, 2, 3) \n",
       "\n",
       "[[7 0 0]\n",
       " [0 0 0]] \n",
-      "\n",
-      "id(y)=2653557786624, id(z)=2653557814256 \n",
       "\n"
      ]
     }
    ],
    "source": [
     "# View (does not copy)\n",
-    "z = y[0,:,:]\n",
+    "z = y[1,:,:]\n",
     "z[:] = 0\n",
     "print(y,'\\n')\n",
-    "y[0,0,0] = 7\n",
+    "y[1,0,0] = 7\n",
     "print(\"metadata : size={0}, bytes={1}, dim={2}, shape={3}\".format(y.size,y.nbytes,y.ndim,y.shape),'\\n')\n",
-    "print(z,'\\n')\n",
-    "print(\"id(y)={0}, id(z)={1}\".format(id(y),id(z)),'\\n')"
+    "print(z,'\\n')"
    ]
   },
   {
@@ -101,9 +115,9 @@
      "output_type": "stream",
      "text": [
       "    A    + x  =       b\n",
-      "[4 7 5 4] [14] [18 21 19 18]\n",
-      "[2 8 3 0] [18] [20 26 21 18]\n",
-      "[6 3 2 9] [14] [20 17 16 23]\n"
+      "[1 5 7 2] [19] [20 24 26 21]\n",
+      "[3 3 8 9] [17] [20 20 25 26]\n",
+      "[0 7 7 7] [15] [15 22 22 22]\n"
      ]
     }
    ],
@@ -125,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "array([12, 18, 10, 13])"
+       "array([ 4, 15, 22, 18])"
       ]
      },
      "execution_count": 5,
@@ -165,6 +179,53 @@
     "\n",
     "# Use assertions to debug\n",
     "assert(x.shape==(3,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 1 1 1 1 0 0 0]\n",
+      "['T', 'T', 'H', 'H', 'H', 'H', 'H', 'T', 'T', 'T'] ['T' 'T' 'H' 'H' 'H' 'H' 'H' 'T' 'T' 'T']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.where as an alternative to list comprehension\n",
+    "condition = np.random.randint(0,2,10) # boolean condition\n",
+    "print(condition)\n",
+    "head = np.array(list('H'*10))\n",
+    "tails = np.array(list('T'*10))\n",
+    "p1 = [(h if c else t) for c,h,t in zip(condition,head,tails)]\n",
+    "p2 = np.where(condition,head,tails)\n",
+    "print(p1,p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of x before squueze  (1, 1, 3)\n",
+      "shape of x after squueze  (3,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# squeeze removea single-dimensional entries from the shape of an array.\n",
+    "x = np.array([[[1, 2, 3]]])\n",
+    "print(\"shape of x before squueze \",x.shape)\n",
+    "x = np.squeeze(x)\n",
+    "print(\"shape of x after squueze \",x.shape)"
    ]
   }
  ],
