added sklearn example in pyt

--- a/pyt/numpy_basics.ipynb
+++ b/pyt/numpy_basics.ipynb
@@ -115,9 +115,9 @@
      "output_type": "stream",
      "text": [
       "    A    + x  =       b\n",
-      "[1 5 7 2] [19] [20 24 26 21]\n",
-      "[3 3 8 9] [17] [20 20 25 26]\n",
-      "[0 7 7 7] [15] [15 22 22 22]\n"
+      "[2 1 7 8] [14] [16 15 21 22]\n",
+      "[9 3 9 6] [11] [20 14 20 17]\n",
+      "[4 7 0 9] [17] [21 24 17 26]\n"
      ]
     }
    ],
@@ -137,19 +137,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 4, 15, 22, 18])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3 1 6 6]\n",
+      " [0 2 6 8]\n",
+      " [8 0 0 6]] \n",
+      "\n",
+      " [11  3 12 20]    (4,)\n",
+      "[[11  3 12 20]]   (1, 4)\n"
+     ]
     }
    ],
    "source": [
-    "# Sum vertically to obtain a row\n",
-    "A.sum(axis=0)"
+    "# Sum vertically to obtain a row (Note use of keepdims is important to avoid bad rank 1 array)\n",
+    "A = np.random.randint(0,10,size=(3,4))\n",
+    "B = np.sum(A, axis = 0)\n",
+    "print(A,'\\n\\n',B,'  ',B.shape)\n",
+    "B = np.sum(A, axis = 0, keepdims = True)\n",
+    "print(B,' ',B.shape)"
    ]
   },
   {
@@ -190,8 +196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 1 1 1 1 1 0 0 0]\n",
-      "['T', 'T', 'H', 'H', 'H', 'H', 'H', 'T', 'T', 'T'] ['T' 'T' 'H' 'H' 'H' 'H' 'H' 'T' 'T' 'T']\n"
+      "[0 1 0 0 0 0 0 1 0 1]\n",
+      "['T', 'H', 'T', 'T', 'T', 'T', 'T', 'H', 'T', 'H'] ['T' 'H' 'T' 'T' 'T' 'T' 'T' 'H' 'T' 'H']\n"
      ]
     }
    ],
@@ -222,6 +228,7 @@
    ],
    "source": [
     "# squeeze removea single-dimensional entries from the shape of an array.\n",
+    "# It basically returns a rank 1 array\n",
     "x = np.array([[[1, 2, 3]]])\n",
     "print(\"shape of x before squueze \",x.shape)\n",
     "x = np.squeeze(x)\n",
