--- a/pyt/matplotlib_basics.ipynb
+++ b/pyt/matplotlib_basics.ipynb
@@ -7,13 +7,37 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import math\n",
-    "from matplotlib import pyplot as plt"
+    "import math"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# One major feature of the IPython kernel is the ability to display plots that are the\n",
+    "# output of running code cells. The IPython kernel is designed to work seamlessly with\n",
+    "# the matplotlib plotting library to provide this functionality.\n",
+    "\n",
+    "# Ref: https://ipython.readthedocs.io/en/stable/interactive/plotting.html\n",
+    "\n",
+    "# To set this up, before any plotting or import of matplotlib is performed execute the \n",
+    "# command: %matplotlib command. This performs the necessary behind-the-scenes setup for\n",
+    "# IPython to work correctly hand in hand with matplotlib\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# sets the backend of matplotlib to the 'inline' backend\n",
+    "# With this backend, the output of plotting commands is displayed inline within frontends\n",
+    "# like the Jupyter notebook, directly below the code cell that produced it.\n",
+    "\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +91,7 @@
     }
    ],
    "source": [
-    "# simple scatter plto\n",
+    "# simple scatter plot\n",
     "theta = np.arange(0,360,1)\n",
     "R = 1; x = R*np.cos(theta*math.pi/180); y = R*np.sin(theta*math.pi/180)\n",
     "plt.scatter(x, y, c=y, s=40, cmap=plt.cm.Spectral);\n",
