--- a/pyt/numpy_basics.ipynb
+++ b/pyt/numpy_basics.ipynb
@@ -115,9 +115,9 @@
      "output_type": "stream",
      "text": [
       "    A    + x  =       b\n",
-      "[2 1 7 8] [14] [16 15 21 22]\n",
-      "[9 3 9 6] [11] [20 14 20 17]\n",
-      "[4 7 0 9] [17] [21 24 17 26]\n"
+      "[8 3 8 2] [18] [26 21 26 20]\n",
+      "[5 4 2 5] [16] [21 20 18 21]\n",
+      "[5 1 4 9] [15] [20 16 19 24]\n"
      ]
     }
    ],
@@ -140,12 +140,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3 1 6 6]\n",
-      " [0 2 6 8]\n",
-      " [8 0 0 6]] \n",
+      "[[0 6 6 6]\n",
+      " [2 1 6 7]\n",
+      " [3 7 1 4]] \n",
       "\n",
-      " [11  3 12 20]    (4,)\n",
-      "[[11  3 12 20]]   (1, 4)\n"
+      " [ 5 14 13 17]    (4,)\n",
+      "[[ 5 14 13 17]]   (1, 4)\n"
      ]
     }
    ],
@@ -196,8 +196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 0 0 0 0 0 1 0 1]\n",
-      "['T', 'H', 'T', 'T', 'T', 'T', 'T', 'H', 'T', 'H'] ['T' 'H' 'T' 'T' 'T' 'T' 'T' 'H' 'T' 'H']\n"
+      "[0 1 1 0 1 1 1 1 1 0]\n",
+      "['T', 'H', 'H', 'T', 'H', 'H', 'H', 'H', 'H', 'T'] ['T' 'H' 'H' 'T' 'H' 'H' 'H' 'H' 'H' 'T']\n"
      ]
     }
    ],
@@ -233,6 +233,53 @@
     "print(\"shape of x before squueze \",x.shape)\n",
     "x = np.squeeze(x)\n",
     "print(\"shape of x after squueze \",x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A     * x = b\n",
+      "[6 7 6 7 1] [2] [123]\n",
+      "[9 7 0 9 1] [6] [93]\n",
+      "[1 3 4 4 1] [7] [66]\n",
+      "[6 9 5 3 6] [3] [146]\n",
+      "[2 7 3 5 1] [6] [88]\n",
+      "\n",
+      "permutation [4, 2, 1, 3, 0] \n",
+      "\n",
+      "     A     * x = b\n",
+      "[1 6 7 7 6] [6] [123]\n",
+      "[1 0 7 9 9] [7] [93]\n",
+      "[1 4 3 4 1] [6] [66]\n",
+      "[6 5 9 3 6] [3] [146]\n",
+      "[1 3 7 5 2] [2] [88]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random permutation using np.random.permutation\n",
+    "m = 5\n",
+    "A = np.random.randint(0,10,size=(m,m))\n",
+    "x = np.random.randint(0,10,size=(m,1))\n",
+    "b = np.dot(A,x)\n",
+    "print(\"     {0}     * {1} = {2}\".format('A','x','b'))\n",
+    "for i in range(A.shape[0]):\n",
+    "    print(A[i,:],x[i],b[i])\n",
+    "    \n",
+    "permutation = list(np.random.permutation(m))\n",
+    "print(\"\\npermutation\",permutation,\"\\n\")\n",
+    "shuffled_A = A[:, permutation]\n",
+    "shuffled_x = x[permutation,:]\n",
+    "shuffled_b = np.dot(shuffled_A,shuffled_x)\n",
+    "print(\"     {0}     * {1} = {2}\".format('A','x','b'))\n",
+    "for i in range(A.shape[0]):\n",
+    "    print(shuffled_A[i,:],shuffled_x[i],shuffled_b[i])"
    ]
   }
  ],
