minor updates in pyt

--- a/pyt/numpy_basics.ipynb
+++ b/pyt/numpy_basics.ipynb
@@ -115,9 +115,9 @@
      "output_type": "stream",
      "text": [
       "    A    + x  =       b\n",
-      "[8 3 8 2] [18] [26 21 26 20]\n",
-      "[5 4 2 5] [16] [21 20 18 21]\n",
-      "[5 1 4 9] [15] [20 16 19 24]\n"
+      "[1 4 5 6] [11] [12 15 16 17]\n",
+      "[9 8 8 8] [15] [24 23 23 23]\n",
+      "[3 3 1 7] [10] [13 13 11 17]\n"
      ]
     }
    ],
@@ -140,12 +140,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 6 6 6]\n",
-      " [2 1 6 7]\n",
-      " [3 7 1 4]] \n",
+      "[[7 6 8 1]\n",
+      " [3 0 9 4]\n",
+      " [7 7 8 9]] \n",
       "\n",
-      " [ 5 14 13 17]    (4,)\n",
-      "[[ 5 14 13 17]]   (1, 4)\n"
+      " [17 13 25 14]    (4,)\n",
+      "[[17 13 25 14]]   (1, 4)\n"
      ]
     }
    ],
@@ -196,8 +196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 1 0 1 1 1 1 1 0]\n",
-      "['T', 'H', 'H', 'T', 'H', 'H', 'H', 'H', 'H', 'T'] ['T' 'H' 'H' 'T' 'H' 'H' 'H' 'H' 'H' 'T']\n"
+      "[0 0 0 0 0 1 0 1 1 1]\n",
+      "['T', 'T', 'T', 'T', 'T', 'H', 'T', 'H', 'H', 'H'] ['T' 'T' 'T' 'T' 'T' 'H' 'T' 'H' 'H' 'H']\n"
      ]
     }
    ],
@@ -245,20 +245,20 @@
      "output_type": "stream",
      "text": [
       "     A     * x = b\n",
-      "[6 7 6 7 1] [2] [123]\n",
-      "[9 7 0 9 1] [6] [93]\n",
-      "[1 3 4 4 1] [7] [66]\n",
-      "[6 9 5 3 6] [3] [146]\n",
-      "[2 7 3 5 1] [6] [88]\n",
+      "[0 1 4 8 0] [3] [45]\n",
+      "[3 6 1 9 2] [1] [52]\n",
+      "[9 9 0 8 2] [7] [64]\n",
+      "[2 6 0 6 9] [2] [78]\n",
+      "[1 6 4 9 8] [6] [103]\n",
       "\n",
-      "permutation [4, 2, 1, 3, 0] \n",
+      "permutation [3, 0, 4, 2, 1] \n",
       "\n",
       "     A     * x = b\n",
-      "[1 6 7 7 6] [6] [123]\n",
-      "[1 0 7 9 9] [7] [93]\n",
-      "[1 4 3 4 1] [6] [66]\n",
-      "[6 5 9 3 6] [3] [146]\n",
-      "[1 3 7 5 2] [2] [88]\n"
+      "[8 0 0 4 1] [2] [45]\n",
+      "[9 3 2 1 6] [3] [52]\n",
+      "[8 9 2 0 9] [6] [64]\n",
+      "[6 2 9 0 6] [7] [78]\n",
+      "[9 1 8 4 6] [1] [103]\n"
      ]
     }
    ],
@@ -281,6 +281,41 @@
     "for i in range(A.shape[0]):\n",
     "    print(shuffled_A[i,:],shuffled_x[i],shuffled_b[i])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = \n",
+      " [[6 8 0 3]\n",
+      " [2 3 2 0]\n",
+      " [2 2 8 5]]\n",
+      "sorted index = \n",
+      " [[2 3 0 1]\n",
+      " [3 0 2 1]\n",
+      " [0 1 3 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get index after sorting\n",
+    "x = np.random.randint(0,10,(3,4))\n",
+    "print('x = \\n', x)\n",
+    "sortedidx = np.argsort(x,axis=1)\n",
+    "print('sorted index = \\n',sortedidx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
