--- a/pyt/numpy_basics.ipynb
+++ b/pyt/numpy_basics.ipynb
@@ -115,9 +115,9 @@
      "output_type": "stream",
      "text": [
       "    A    + x  =       b\n",
-      "[1 4 5 6] [11] [12 15 16 17]\n",
-      "[9 8 8 8] [15] [24 23 23 23]\n",
-      "[3 3 1 7] [10] [13 13 11 17]\n"
+      "[8 0 8 0] [12] [20 12 20 12]\n",
+      "[7 0 1 1] [16] [23 16 17 17]\n",
+      "[1 0 0 3] [14] [15 14 14 17]\n"
      ]
     }
    ],
@@ -140,12 +140,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[7 6 8 1]\n",
-      " [3 0 9 4]\n",
-      " [7 7 8 9]] \n",
+      "[[7 1 0 4]\n",
+      " [3 1 9 4]\n",
+      " [9 4 3 9]] \n",
       "\n",
-      " [17 13 25 14]    (4,)\n",
-      "[[17 13 25 14]]   (1, 4)\n"
+      " [19  6 12 17]    (4,)\n",
+      "[[19  6 12 17]]   (1, 4)\n"
      ]
     }
    ],
@@ -196,8 +196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 0 0 1 0 1 1 1]\n",
-      "['T', 'T', 'T', 'T', 'T', 'H', 'T', 'H', 'H', 'H'] ['T' 'T' 'T' 'T' 'T' 'H' 'T' 'H' 'H' 'H']\n"
+      "[0 1 1 1 1 0 0 0 0 0]\n",
+      "['T', 'H', 'H', 'H', 'H', 'T', 'T', 'T', 'T', 'T'] ['T' 'H' 'H' 'H' 'H' 'T' 'T' 'T' 'T' 'T']\n"
      ]
     }
    ],
@@ -245,20 +245,20 @@
      "output_type": "stream",
      "text": [
       "     A     * x = b\n",
-      "[0 1 4 8 0] [3] [45]\n",
-      "[3 6 1 9 2] [1] [52]\n",
-      "[9 9 0 8 2] [7] [64]\n",
-      "[2 6 0 6 9] [2] [78]\n",
-      "[1 6 4 9 8] [6] [103]\n",
+      "[8 0 7 9 7] [4] [218]\n",
+      "[4 1 7 8 5] [4] [179]\n",
+      "[4 2 2 8 9] [6] [189]\n",
+      "[5 3 1 5 0] [9] [83]\n",
+      "[0 3 5 3 8] [9] [141]\n",
       "\n",
-      "permutation [3, 0, 4, 2, 1] \n",
+      "permutation [1, 0, 3, 2, 4] \n",
       "\n",
       "     A     * x = b\n",
-      "[8 0 0 4 1] [2] [45]\n",
-      "[9 3 2 1 6] [3] [52]\n",
-      "[8 9 2 0 9] [6] [64]\n",
-      "[6 2 9 0 6] [7] [78]\n",
-      "[9 1 8 4 6] [1] [103]\n"
+      "[0 8 9 7 7] [4] [218]\n",
+      "[1 4 8 7 5] [4] [179]\n",
+      "[2 4 8 2 9] [9] [189]\n",
+      "[3 5 5 1 0] [6] [83]\n",
+      "[3 0 3 5 8] [9] [141]\n"
      ]
     }
    ],
@@ -292,13 +292,13 @@
      "output_type": "stream",
      "text": [
       "x = \n",
-      " [[6 8 0 3]\n",
-      " [2 3 2 0]\n",
-      " [2 2 8 5]]\n",
+      " [[3 7 8 6]\n",
+      " [9 5 2 3]\n",
+      " [7 9 8 9]]\n",
       "sorted index = \n",
-      " [[2 3 0 1]\n",
-      " [3 0 2 1]\n",
-      " [0 1 3 2]]\n"
+      " [[0 3 1 2]\n",
+      " [2 3 1 0]\n",
+      " [0 2 1 3]]\n"
      ]
     }
    ],
@@ -308,6 +308,68 @@
     "print('x = \\n', x)\n",
     "sortedidx = np.argsort(x,axis=1)\n",
     "print('sorted index = \\n',sortedidx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = \n",
+      " [[2 9 4]\n",
+      " [5 6 8]]\n",
+      "y = \n",
+      " [[8 9 3]\n",
+      " [1 3 4]]\n",
+      "vertical(axis=0) concatenate, z = \n",
+      " [[2 9 4]\n",
+      " [5 6 8]\n",
+      " [8 9 3]\n",
+      " [1 3 4]]\n",
+      "horizontal(axis=1) concatenate, z = \n",
+      " [[2 9 4 8 9 3]\n",
+      " [5 6 8 1 3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Concatenate\n",
+    "x = np.random.randint(0,10,(2,3))\n",
+    "y = np.random.randint(0,10,(2,3))\n",
+    "print('x = \\n', x)\n",
+    "print('y = \\n', y)\n",
+    "z = np.concatenate((x,y),axis=0)\n",
+    "print('vertical(axis=0) concatenate, z = \\n', z)\n",
+    "z = np.concatenate((x,y),axis=1)\n",
+    "print('horizontal(axis=1) concatenate, z = \\n', z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = \n",
+      " [[5 9 6]\n",
+      " [5 0 0]]\n",
+      "Ravelled x =  [5 9 6 5 0 0] and has shape  (6,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Raveling\n",
+    "# numpy.ravel takes a multi-dimensional array and returns its contents inside of a 1D vector.\n",
+    "x = np.random.randint(0,10,(2,3))\n",
+    "print('x = \\n',x)\n",
+    "print('Ravelled x = ',x.ravel(),'and has shape ',x.ravel().shape)"
    ]
   },
   {
