--- a/opencv/DisplayImage/readme
+++ b/opencv/DisplayImage/readme
@@ -1,4 +1,19 @@
+
+# Build
+```
+g++ -IC:\Users\ahkad\opencv\gnu_build\install\include main.cpp -LC:\Users\ahkad\opencv\gnu_build\install\x64\mingw\bin -lopencv_world420 -o tutorial
+```
+
+```
+tutorial belgium.jpg
+```
+
+# Build using CMake
+```
 cd build
 cmake ..
 make
 tutorial ..\belgium.jpg
+```
+
+Note: the path environement variable should point to ``%OPENCV_DIR%\bin`` to find ``libopencv_world420.dll``. Alternative copy the dll next to the executable.
