--- a/pyt/query_json/readme
+++ b/pyt/query_json/readme
@@ -1,5 +1,9 @@
+Part 1
 The data from https://www.travel-advisory.info/api is saved to a JSON file called data.json
 A simple CLI is created to lookup country data given country code.
 
 Usage (first add content of bashrc_custom to ~/.bashrc and source the ~/.bashrc in terminal)
 lookup "AD" "AE" "AF"
+
+Part 2
+A more user intercative menu based solution is available in menu.py
