--- a/pyt/OOP.ipynb
+++ b/pyt/OOP.ipynb
@@ -69,7 +69,7 @@
     "1. \"local\" - innermost scope that’s local to a function. If you refer to x inside a function, then the interpreter first searches for it in this scope.\n",
     "2. \"nonlocal\" - enclosing function’s scope. If x isn’t in the local scope then the interpreter looks in the nonlocal scope.\n",
     "3. \"global\" - outermost scope with `__name__` = \"__main__\". If neither of the above searches is fruitful, then the interpreter looks in the global scope next. The global namespace is created when python environment is first entered, and is never deleted.\n",
-    "4. \"\\__builtins\\__\" - contains built-in names (ex `abs()` etc). If it can’t find x anywhere else, then the interpreter tries the this scope. It is created when the Python interpreter starts up, and is never deleted.\n",
+    "4. \"\\__builtins\\__\" - contains built-in names (ex `abs()` etc). If it can’t find x anywhere else, then the interpreter tries this scope. It is created when the Python interpreter starts up, and is never deleted.\n",
     "\n",
     "Note: `del obj.attr` will remove the attribute (or name) `attr` from the object (or namespace) named by `obj`."
    ]
@@ -182,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 <function MyComplex.mag at 0x0000028A69B18678> A simple example class\n",
+      "0 0 <function MyComplex.mag at 0x000001EB79C375E8> A simple example class\n",
       "3 4 5.0 1e-06 A simple example class\n"
      ]
     }
@@ -218,7 +218,7 @@
    "outputs": [],
    "source": [
     "# Adding iterator behavior to classes\n",
-    "class Reverse:\n",
+    "class Reverse1:\n",
     "    \"\"\"Iterator for looping over a sequence backwards.\"\"\"\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
@@ -251,7 +251,7 @@
     }
    ],
    "source": [
-    "rev = Reverse('spam')\n",
+    "rev = Reverse1('spam')\n",
     "for ch in rev:\n",
     "    print(ch)"
    ]
@@ -263,7 +263,7 @@
    "outputs": [],
    "source": [
     "# The same using generators\n",
-    "def reverse(data):\n",
+    "def Reverse2(data):\n",
     "    for index in range(len(data)-1, -1, -1):\n",
     "        yield data[index]"
    ]
@@ -285,17 +285,10 @@
     }
    ],
    "source": [
-    "rev = Reverse('spam')\n",
+    "rev = Reverse2('spam')\n",
     "for ch in rev:\n",
     "    print(ch)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
